Fix: allowed client side js on comps

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@ import { Base, Header, Hero, Experience, Footer, FeaturedProjects, Divider } fro
 	<Base>
 	<Header />
 	<Hero />
-	<Experience />
+	<Experience client:load />
 	<Divider />
-	<FeaturedProjects />
+	<FeaturedProjects client:load/>
 	<Divider />
 	<Footer />
 
