--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
   font-weight: 400;
   font-style: normal
 }
+
 .SocialBtn{
   display: flex;
   justify-content:center;
@@ -45,7 +46,21 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+#Children {
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier();
+}
 
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
+}
 a {
   color: inherit;
   text-decoration: none;
