--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props as Props;
@@ -8,27 +8,40 @@ const { title } = Astro.props as Props;
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<title>{title}</title>
-  <script defer data-domain="fahad.alhatshami.com" src="https://analytics.alhatshami.com/js/plausible.js"></script>
+  <title>Panthy</title>
+  <meta name="description" content="Panthys personal website where you can find projects and blog posts">
+  <meta name="keywords" content={` Panthys, personal, website, projects, blog, posts,Fahad, Fahad Alhatshami,
+    alhatshami, fahad alhatshami,blog, Full Stack, Sweden, Software, JavaScript, React, Node, Express, MongoDB, `}>
+  <meta name="author" content="Fahad Alhatshami">
+  <meta name="og:title" content="Fahad Alhatshamis Personal Website">
+  <meta name="og:description" content="Panthys personal website where you can find projects and blog posts">
+  <meta name="og:image" content="https://panthys.com/favicon.png">
+  <meta name="og:url" content="https://fahad.alhatshami.com">
+  <meta name="og:type" content="website">
+
+
 </head>
+
 <body>
-	<slot />
+  <slot />
 </body>
+
 </html>
 
 <style>
   :root {
     --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-		--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem); 
+    --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
     --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 
     --color-text: hsl(12, 5%, 4%);
     --color-bg: hsl(10, 21%, 95%);
-		--color-border: hsl(17, 24%, 90%);
+    --color-border: hsl(17, 24%, 90%);
   }
 
   html {
@@ -52,6 +65,6 @@ const { title } = Astro.props as Props;
 
   :global(code) {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+      Bitstream Vera Sans Mono, Courier New, monospace;
   }
 </style>
